Fix #309